change color setup

--- a/src/stories/base/Colors.mdx
+++ b/src/stories/base/Colors.mdx
@@ -12,7 +12,6 @@ Each color has its extended color palette with 11 variations from light to dark.
 
 We also have included Pink Ribbon and Vipps colors into our docs, as they are much used.
 
-<Canvas of={ColorsStories.BasicColors} />
-<Canvas of={ColorsStories.ExtendedColors} />
+<Canvas of={ColorsStories.Colors} />
 <Canvas of={ColorsStories.PinkRibbonColors} />
 <Canvas of={ColorsStories.VippsColors} />
