--- a/src/stories/base/Introduction.mdx
+++ b/src/stories/base/Introduction.mdx
@@ -2,24 +2,23 @@ import { Meta } from "@storybook/addon-docs/blocks";
 
 <Meta title="base/Introduction" />
 
-# kf-tailwind
+# @kreftforeningen/web-css
 
-Package to be used together with the main Tailwind CSS package.
+Package to be used as a base for @kreftforeningen/web-react.
 
-- [NPM.js](https://www.npmjs.com/package/kf-tailwind)
-- [GitHub](https://github.com/kreftforeningen/kf-tailwind)
+- [NPM.js](https://www.npmjs.com/package/@kreftforeningen/web-css)
+- [GitHub](https://github.com/kreftforeningen/web-css/)
 
 ## Install
 
 ```
-pnpm add kf-tailwind
+pnpm add @kreftforeningen/web-css
 ```
 
 ## Usage
 
-Import it after Tailwind, like this:
+Import it at the top of your main css file, like this:
 
 ```
-@import "tailwindcss";
-@import "kf-tailwind";
+@import "@kreftforeningen/web-css";
 ```
