--- a/src/stories/components/Introduction.mdx
+++ b/src/stories/components/Introduction.mdx
@@ -2,15 +2,15 @@ import { Meta } from "@storybook/addon-docs/blocks";
 
 <Meta title="components/Introduction" />
 
-# kf-components
+# @kreftforeningen/web-react
 
 List of components.
 
-- [NPM.js](ttps://www.npmjs.com/package/kf-react-components)
-- [GitHub](https://github.com/kreftforeningen/kf-react-components)
+- [NPM.js](https://www.npmjs.com/package/@kreftforeningen/web-react)
+- [GitHub](https://github.com/kreftforeningen/web-react)
 
 ## Install
 
 ```
-pnpm add kf-component-library
+pnpm add @kreftforeningen/web-react
 ```
