change to web-react and web-css

--- a/src/stories/Welcome.mdx
+++ b/src/stories/Welcome.mdx
@@ -6,5 +6,5 @@ import { Meta } from "@storybook/addon-docs/blocks";
 
 This storybook includes documentation of the follow NPM packages. To be used in React apps.
 
-- kf-tailwind shown as base
-- kf-component-library shown as components
+- @kreftforeningen/web-css shown as base
+- @kreftforeninten/web-react shown as components and primitives
