--- a/src/stories/base/Fonts.mdx
+++ b/src/stories/base/Fonts.mdx
@@ -14,12 +14,12 @@ Our design system uses IBM Plex font family ([SIL Open Font License 1.1](https:/
 
 ## Download
 
-- Fonts are included in `kf-tailwind`, read below for usage
+- Fonts are included in `@kreftforeningen/web-css`, read below for usage
 - Also available to download at google-webfonts-helper: [sans](https://gwfh.mranftl.com/fonts/ibm-plex-sans?subsets=latin), [condensed](https://gwfh.mranftl.com/fonts/ibm-plex-sans-condensed?subsets=latin) and [serif](https://gwfh.mranftl.com/fonts/ibm-plex-serif?subsets=latin),
 
 ## Usage
 
-Each font variant is available as a Tailwind CSS class:
+Each font variant is available as a variable:
 
 - `font-sans` - Default body text
 - `font-condensed` - Condensed headings
